[package]
name = "binance_orderbooks"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
arrayvec = { version = "0.7", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
url = "2.4"
